<?xml version="1.0"?>
<package format="2">
  <name>zeus_localization</name>
  <version>0.0.0</version>
  <description>The zeus_localization package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">Jeremie Bourque</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

</package>
